# energy-price-forecasting

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_energy_price_forecasting.ipynb
scripts/: download_data.py  generate_sample_data.py  run_drift_analysis.py  run_training.py  sync_readme_metrics.py
src/energy_forecasting/: __init__.py  config.py  data.py  drift.py  evaluate.py  features.py  pipeline.py  synthetic.py  train.py
tests/: test_data.py  test_drift.py  test_features.py  test_readme_metrics.py  test_temporal_split.py  test_training.py
